main: refactor auth
