# mindtrack-core/security/security-model/src/main/java/ru/rstd/mtrack/core/security/model/token/AccessWithRefreshToken.java
@@ -1,4 +1,7 @@
 package ru.rstd.mtrack.core.security.model.token;
 
-public record AccessWithRefreshToken(String accessToken, String refreshToken) {
+
+import org.springframework.http.ResponseCookie;
+
+public record AccessWithRefreshToken(String accessToken, ResponseCookie responseRefreshTokenCookie) {
 }
